# dealforge-crm

./: .gitignore  README.md
backend/: .dockerignore  pyproject.toml  pytest.ini
frontend/: .dockerignore
